--- a/styles.css
+++ b/styles.css
@@ -53,8 +53,14 @@ body {
   padding: 0 4px;
 }
 
-#header-flex-container > div a {
-  margin-right: 10px;
+.social-ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+}
+
+.social-ul li {
+  margin-right: 25px;
 }
 
 /* ------------------Works--------------- */
@@ -66,10 +72,10 @@ body {
   color: #172b4d;
   text-align: center;
   margin: 24px 20px;
+  padding: 20px;
 }
 
-.section-header:after
-{
+.section-header::after {
   content: ' ';
   display: block;
   border: 2px solid #36b37e;
@@ -112,11 +118,13 @@ p.card-title {
 
 div.tags-flex-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  row-gap: 10px;
+  flex-wrap: wrap;
 }
 
 p.tag {
-  margin: 0px 6px;
+  margin: 0 6px;
   background: #ebf0ee;
   border-radius: 4px;
   align-items: center;
@@ -143,8 +151,92 @@ button.card-btn {
   border: 0;
 }
 
+/* --------------About me------------ */
+#about-me {
+  margin-top: 60px;
+  text-align: center;
+  position: relative;
+}
 
+.about-me-img1 {
+  position: absolute;
+  right: 0;
+  top: -55px;
+}
 
+.about-me-img2 {
+  position: absolute;
+  left: 0;
+  top: 21%;
+}
 
+#about-me > h2 {
+  margin: 24px 0;
+  color: #172b4d;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 52px;
+}
 
+#about-me > p {
+  margin: 24px 12px;
+  color: #42526e;
+  font-size: 20px;
+  line-height: 160%;
+  padding: 24px 12px;
+}
 
+.btn {
+  background: #36b37f;
+  border-radius: 4px;
+  padding: 12px;
+  letter-spacing: 0.03em;
+  color: white;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  margin: auto;
+  border: 0;
+}
+
+#about-me-ul {
+  list-style: none;
+  margin: 0;
+  padding: 40px 0 0 0;
+}
+
+#about-me-ul li {
+  background: #ebf0ee;
+  border: 1px solid #c1c7d0;
+  box-sizing: border-box;
+  border-radius: 8px;
+  height: 352px;
+  margin: 24px;
+}
+
+#about-me-ul img {
+  margin-top: 40px;
+}
+
+p.White-tag {
+  margin: 0 8px;
+  background: white;
+  border-radius: 8px;
+  align-items: center;
+  padding: 12px;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  color: #36b37e;
+  font-family: 'Inter', sans-serif;
+}
+
+#about-me-ul li > p {
+  color: #344563;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 133%;
+  text-align: center;
+  margin: 24px 0;
+}
