--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,13 @@ body {
   font-family: 'Inter', sans-serif;
 }
 
+
+
+
+
+
+
+/* --------------Nav Section------------------ */
 #nav-flex-container {
   display: flex;
   justify-content: space-between;
@@ -28,10 +35,14 @@ body {
   line-height: 28px;
   color: #28352f;
 }
-
+.nav-ul {
+  display: none;
+}
+/* --------------Header Section------------------ */
 #header-flex-container {
-  background-image: url("Images/header-illsutration-mobile.svg");
-  background-size: cover;
+  background-image: url(Images/header-illsutration-mobile@2x.png);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
   width: 100%;
   height: 648px;
   text-align: center;
@@ -43,11 +54,11 @@ body {
 
 #header-flex-container > h1 {
   font-weight: bold;
-  font-size: 40px;
-  line-height: 52px;
+  font-size: 10vw;
+  line-height: 130%;
   text-align: center;
   color: #172c4f;
-  padding-top: 31px;
+  padding-top: 10%;
   margin-bottom: 0;
 }
 
@@ -56,22 +67,21 @@ body {
 }
 
 #header-flex-container > p {
-  font-size: 20px;
-  line-height: 28px;
+  font-size: 5.5vw;
+  line-height: 150%;
   color: #172b4d;
   font-weight: 400;
-  margin: 0 24px;
-  padding: 0 4px;
+  margin: 0 7%;
+  padding: 0 1%;
 }
 
 .social-ul {
-  list-style: none;
   display: flex;
   justify-content: center;
 }
 
 .social-ul li {
-  margin-right: 19px;
+  margin-right: 5%;
 }
 
 /* ------------------Works--------------- */
@@ -125,7 +135,7 @@ body {
   font-size: 24px;
   line-height: 32px;
   color: #3a4a42;
-  padding: 0 20px;
+  padding: 0 6%;
   text-align: center;
   margin: 16px 0 0 0;
 }
@@ -136,7 +146,7 @@ body {
   row-gap: 10px;
   flex-wrap: wrap;
   list-style: none;
-  padding: 0;
+  padding: 10px 0 0 0;
 }
 
 .tag {
@@ -228,8 +238,9 @@ button.card-btn {
   background: #ebf0ee;
   border: 1px solid #c1c7d0;
   border-radius: 8px;
-  height: 352px;
+  /* height: 352px; */
   margin: 24px;
+  padding: 20px 0;
 }
 
 #about-me-ul img {
@@ -333,4 +344,159 @@ button.card-btn {
   font-weight: 400;
   color: #42526e;
   margin-bottom: 147px;
+}
+
+
+
+/* --------------Desktop version------------------ */
+@media screen and (min-width: 1024px){
+  /* --------Nav--------------- */
+  #nav-flex-container > img,#nav-flex-container > p {
+    display: none;
+  }
+
+  .nav-ul {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    column-gap: 3%;
+    margin-top: 2%;
+  }
+
+  .nav-ul > li > a {
+    text-decoration: none;
+    color: #172b4d;
+    font-size: 13px;
+  }
+
+  /* -----------Header------------ */
+  #header-flex-container {
+    background-image: url(Images/Header-llustration-desktop.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 780px;
+    text-align: center;
+    font-family: 'Inter', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+  }
+  
+  #header-flex-container > h1 {
+    font-weight: bold;
+    font-size: 3.5vw;
+    line-height: 130%;
+    text-align: center;
+    color: #172c4f;
+    padding-top: 10%;
+    margin-bottom: 1%;
+  }
+  
+  #header-flex-container > h1 > span {
+    color: #36b37e;
+  }
+  
+  #header-flex-container > p {
+    font-size: 1.6vw;
+    line-height: 150%;
+    color: #172b4d;
+    font-weight: 400;
+    margin: 0 20% 3% 20%;
+    padding: 0 1%;
+  }
+  
+  .social-ul {
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+    margin-bottom: 5%;
+  }
+  
+  .social-ul li {
+    margin-right: 2%;
+  }
+
+  /* --------------Works Section-------------- */
+  
+  #cards-grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 0 7%;
+    grid-gap: 3% 2%;
+  }
+
+  .card {
+    margin: 0;
+  }
+
+  /* --------------About me Section-------------- */
+  #about-me {
+    padding-top: 8%;
+    background-image: url("Images/illustration-about-me-2-desktop.png"), url("Images/about-desktop-right.png");
+    background-repeat: no-repeat, no-repeat;
+    background-position: 0% 30%, 100% 10%;
+    background-size: 17vw;
+  }
+
+  #about-me > p {
+    padding: 0 18%;
+  }
+
+  #about-me-ul {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 5% 7%;
+  }
+
+  #about-me-ul li {
+    margin: 0 3%;
+    
+  }
+
+  /* --------------Footer Section-------------- */
+  #footer-section {
+    display: grid;
+    grid-template-columns: 40% 60%;
+    background-image: 
+    url("Images/illustration-1-contact-form-desktop.png"), 
+    url("Images/illustration-2-contact-form-desktop.png"),
+    url("Images/contact\ form-illustratoin-3-desktop.png");
+    background-position: 0 78%, 21% 75%, 100% 61%;
+    background-size: 16vw;
+  }
+
+  #footer-icons {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    border-top: 1px solid #dfe1e6;
+  }
+  
+  .footer-description {
+    padding-top: 22%;
+    padding-left: 18%;
+    line-height: 52px;
+    margin: 0;
+    font-size: 30px;
+  }
+
+  .btn {
+    margin: 0 24px;
+  }
+
+  #footer-form {
+    padding-bottom: 22%;
+    padding-right: 3%;
+    text-align: start;
+  }
+  
+
+  #footer-email {
+    display: none;
+  }
+
+  .social-ul {
+    padding-top: 2%;
+    margin-bottom: 2%;
+  }
 }
