--- a/styles.css
+++ b/styles.css
@@ -157,8 +157,11 @@ body {
   letter-spacing: 0.03em;
   color: #3a4a42;
   font-family: 'Inter', sans-serif;
+  transition: padding 2s;
 }
-
+.tag:hover{
+  padding: 12px 16px
+}
 button.card-btn {
   background: #36b37f;
   border-radius: 4px;
