--- a/styles.css
+++ b/styles.css
@@ -289,6 +289,11 @@ button.card-btn {
   text-align: center;
   color: #172b4d;
   margin: 0 24px;
+  transition: color 4s;
+}
+
+.footer-description:hover {
+  color: #36b37f;
 }
 
 #footer-form {
