--- a/styles.css
+++ b/styles.css
@@ -171,8 +171,8 @@ button.card-btn {
   padding: 12px;
   letter-spacing: 0.03em;
   color: white;
-  font-weight: 500;
-  font-size: 17px;
+  font-weight: bold;
+  font-size: 20px;
   line-height: 24px;
   margin: auto;
   border: 0;
