change button colour

--- a/styles.css
+++ b/styles.css
@@ -165,7 +165,7 @@ body {
 }
 
 button.card-btn {
-  background: #36b37f;
+  background: #246a4c;
   border-radius: 4px;
   align-items: center;
   padding: 12px;
