--- a/styles.css
+++ b/styles.css
@@ -354,6 +354,11 @@ button.card-btn {
   margin-bottom: 147px;
 }
 
+p.email-error {
+  color:red;
+  font-size: 16px;
+}
+
 /* ---------------Display menu-------------------- */
 .display-menu {
   display: block;
@@ -661,3 +666,5 @@ button.card-btn {
     display: initial;
   }
 }
+
+
